--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ./database:/var/lib/postgresql/data
   backend:
     build: 
       context: ./backend
@@ -8,10 +16,13 @@ services:
       - "3000:3000"
     depends_on:
       - db
-  db:
-    image: "postgres:13"
-    environment:
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_database
+frontend:
+  build: 
+    context: ./frontend
+    dockerfile: ../docker/frontend.dockerfile  # Replace with your Dockerfile name if different
 
+    ports:
+      - "3001:3001"
+    volumes:
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
