--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,18 @@
   "dependencies": {
     "@nestjs/common": "latest",
     "@nestjs/core": "latest",
-    "@nestjs/passport": "latest",
+    "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "latest",
     "@nestjs/typeorm": "latest",
     "@nestjs/websockets": "latest",
+    "bcrypt": "latest",
+    "multer": "latest",
     "passport": "latest",
     "passport-oauth2": "latest",
     "pg": "latest",
     "reflect-metadata": "latest",
     "rxjs": "latest",
+    "speakeasy": "latest",
     "typeorm": "latest",
     "ws": "latest"
   },
