--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,15 @@
     "@nestjs/typeorm": "latest",
     "@nestjs/websockets": "latest",
     "bcrypt": "latest",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "multer": "latest",
     "passport": "latest",
     "passport-oauth2": "latest",
     "pg": "latest",
     "reflect-metadata": "latest",
     "rxjs": "latest",
+    "socket.io": "^4.7.2",
     "speakeasy": "latest",
     "typeorm": "latest",
     "ws": "latest"
