--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "latest",
     "@nestjs/typeorm": "latest",
     "@nestjs/websockets": "latest",
+    "axios": "^1.5.0",
     "bcrypt": "latest",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
