--- a/docker/backend.env
+++ b/docker/backend.env
@@ -2,7 +2,7 @@ PORT=3000
 
 POSTGRES_DB=database
 POSTGRES_USER=transcendence
-POSTGRES_PASSWORD=transcendence
+POSTGRES_PASSWORD=garen
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
