--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '3'
 services:
-  db:
+  postgres:
     image: postgres:latest
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
     environment:
-      - /docker/db.env
-
+      POSTGRES_USER: transcendence
+      POSTGRES_PASSWORD: garen
+      POSTGRES_DB: database
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
   backend:
     build: 
       context: ./backend
@@ -17,9 +15,13 @@ services:
     ports:
       - "3001:3001"
     depends_on:
-      - db
+      - postgres
     environment:
-      - /docker/backend.env
+      POSTGRES_DB: database
+      POSTGRES_USER: transcendence
+      POSTGRES_PASSWORD: garen
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
   frontend:
     build: 
       context: ./frontend
