--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,12 @@ services:
       context: ./frontend
       dockerfile: ../docker/frontend.dockerfile  
     ports:
-      - "8080:3000"
+      - "3000:3000"
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
-    env_file:
-      - ./docker/frontend.env
+    environment:
+      REACT_APP_BACKEND_URL: http://backend:3001  # Changed from localhost to backend
+    depends_on:
+      - backend
+    
