--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
-    "axios": "^1.5.0",
+    "axios": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "latest",
     "web-vitals": "latest"
   },
   "scripts": {
