--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,16 @@
     "@nestjs/core": "latest",
     "@nestjs/passport": "latest",
     "@nestjs/platform-express": "latest",
+    "@nestjs/platform-socket.io": "^10.2.5",
     "@nestjs/typeorm": "latest",
     "@nestjs/websockets": "latest",
-    "axios": "^1.5.0",
+    "axios": "latest",
     "bcrypt": "latest",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-transformer": "latest",
+    "class-validator": "latest",
     "multer": "latest",
     "passport": "latest",
+    "passport-42": "^1.2.6",
     "passport-oauth2": "latest",
     "pg": "latest",
     "reflect-metadata": "latest",
@@ -43,8 +45,12 @@
   },
   "devDependencies": {
     "@nestjs/cli": "latest",
+    "@nestjs/common": "latest",
+    "@nestjs/config": "latest",
+    "@nestjs/passport": "latest",
     "@nestjs/schematics": "latest",
     "@nestjs/testing": "latest",
+    "@nestjs/websockets": "latest",
     "@types/express": "latest",
     "@types/jest": "latest",
     "@types/node": "latest",
@@ -56,6 +62,7 @@
     "eslint-plugin-prettier": "latest",
     "jest": "latest",
     "prettier": "latest",
+    "socket.io-client": "latest",
     "source-map-support": "latest",
     "supertest": "latest",
     "ts-jest": "latest",
