--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
     "axios": "latest",
+    "passport-42": "^1.2.6",
     "react": "latest",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
     "react-scripts": "latest",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "latest"
   },
   "scripts": {
