--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,41 @@
 version: '3'
 services:
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: transcendence
-      POSTGRES_PASSWORD: garen
-      POSTGRES_DB: database
-    volumes:
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-  backend:
-    build: 
-      context: ./backend
-      dockerfile: ../docker/backend.dockerfile
-    ports:
-      - "3001:3001"
-    depends_on:
-      - postgres
-    environment:
-      POSTGRES_DB: database
-      POSTGRES_USER: transcendence
-      POSTGRES_PASSWORD: garen
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
   frontend:
-    build: 
-      context: ./frontend
-      dockerfile: ../docker/frontend.dockerfile  
+    container_name: front-React
+    build: ./frontend
     ports:
-      - "3000:3001"
+      - "3000:3000"
     volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./frontend:/app
     environment:
-      REACT_APP_BACKEND_URL: http://backend:3000  # Changed from localhost to backend
-    depends_on:
-      - backend
-    
+      - NODE_ENV=development
+
+  backend:
+    container_name: back-Nest
+    build: ./backend
+    ports:
+      - "6697:6697"
+    volumes:
+      - ./backend:/app
+    environment:
+      - NODE_ENV=development
+
+  db:
+    container_name: pg_container
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: test_db
+    ports:
+      - "5432:5432"
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
