--- a/backend/package.json
+++ b/backend/package.json
@@ -20,56 +20,34 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "latest",
-    "@nestjs/core": "latest",
-    "@nestjs/passport": "latest",
-    "@nestjs/platform-express": "latest",
-    "@nestjs/platform-socket.io": "^10.2.5",
-    "@nestjs/typeorm": "latest",
-    "@nestjs/websockets": "latest",
-    "axios": "latest",
-    "bcrypt": "latest",
-    "class-transformer": "latest",
-    "class-validator": "latest",
-    "multer": "latest",
-    "passport": "latest",
-    "passport-42": "^1.2.6",
-    "passport-oauth2": "latest",
-    "pg": "latest",
-    "reflect-metadata": "latest",
-    "rxjs": "latest",
-    "socket.io": "latest",
-    "speakeasy": "latest",
-    "typeorm": "latest",
-    "ws": "latest"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "latest",
-    "@nestjs/common": "latest",
-    "@nestjs/config": "latest",
-    "@nestjs/passport": "latest",
-    "@nestjs/schematics": "latest",
-    "@nestjs/testing": "latest",
-    "@nestjs/websockets": "latest",
-    "@types/express": "latest",
-    "@types/jest": "latest",
-    "@types/node": "latest",
-    "@types/supertest": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-plugin-prettier": "latest",
-    "jest": "latest",
-    "prettier": "latest",
-    "socket.io-client": "latest",
-    "source-map-support": "latest",
-    "supertest": "latest",
-    "ts-jest": "latest",
-    "ts-loader": "latest",
-    "ts-node": "latest",
-    "tsconfig-paths": "latest",
-    "typescript": "latest"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
