--- a/backend/package.json
+++ b/backend/package.json
@@ -21,64 +21,64 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/axios": "latest",
+    "@nestjs/common": "latest",
+    "@nestjs/config": "latest",
+    "@nestjs/core": "latest",
+    "@nestjs/jwt": "latest",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.0.11",
-    "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.0.11",
-    "@types/bcrypt": "^5.0.0",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "cookie-parser": "^1.4.6",
-    "otplib": "^12.0.1",
-    "passport": "^0.6.0",
-    "passport-42": "^1.2.6",
-    "passport-custom": "^1.1.1",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
-    "postgres": "^3.2.4",
-    "postgresql": "^0.0.1",
-    "qrcode": "^1.5.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.9"
+    "@nestjs/passport": "latest",
+    "@nestjs/platform-express": "latest",
+    "@nestjs/platform-socket.io": "latest",
+    "@nestjs/typeorm": "latest",
+    "@nestjs/websockets": "latest",
+    "@types/bcrypt": "latest",
+    "bcrypt": "latest",
+    "class-transformer": "latest",
+    "class-validator": "latest",
+    "cookie-parser": "latest",
+    "otplib": "latest",
+    "passport": "latest",
+    "passport-42": "latest",
+    "passport-custom": "latest",
+    "passport-google-oauth20": "latest",
+    "passport-jwt": "latest",
+    "passport-local": "latest",
+    "pg": "latest",
+    "postgres": "latest",
+    "postgresql": "latest",
+    "qrcode": "latest",
+    "reflect-metadata": "latest",
+    "rimraf": "latest",
+    "rxjs": "latest",
+    "typeorm": "latest"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^16.11.47",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.2",
-    "prettier": "2.7.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "@nestjs/cli": "latest",
+    "@nestjs/schematics": "latest",
+    "@nestjs/testing": "latest",
+    "@types/cookie-parser": "latest",
+    "@types/express": "latest",
+    "@types/jest": "latest",
+    "@types/multer": "latest",
+    "@types/node": "latest",
+    "@types/passport-jwt": "latest",
+    "@types/passport-local": "latest",
+    "@types/supertest": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "jest": "latest",
+    "prettier": "latest",
+    "source-map-support": "latest",
+    "supertest": "latest",
+    "ts-jest": "latest",
+    "ts-loader": "latest",
+    "ts-node": "latest",
+    "tsconfig-paths": "latest",
+    "typescript": "latest"
   },
   "jest": {
     "moduleFileExtensions": [
