--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fortawesome/fontawesome-free": "^6.1.2",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.45",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.1",
-    "react": "^18.2.0",
-    "react-auth-code-input": "^3.2.1",
-    "react-code-input": "^3.10.1",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-window": "^1.8.7",
-    "socket.io-client": "^4.5.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@fortawesome/fontawesome-free": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "@types/bcrypt": "latest",
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "bcrypt": "latest",
+    "dotenv": "latest",
+    "react": "latest",
+    "react-auth-code-input": "latest",
+    "react-code-input": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest",
+    "react-window": "latest",
+    "socket.io-client": "latest",
+    "typescript": "latest",
+    "web-vitals": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
